# djdemo

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  ruff.toml
src/: manage.py
src/Demo/: asgi.py  settings.py  urls.py  wsgi.py
src/tests/users/: test_models.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py
tests/: __init__.py
tests/users/: test_models.py
